crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__declarations-4.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let rec f = () => f();\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 22,
                    },
                },
                span: 0..22,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 8,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                            span: 8..9,
                            kind: Ident(
                                BindingIdent {
                                    name: "f",
                                    mutable: false,
                                    span: 8..9,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 8,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 9,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 21,
                                    },
                                },
                                span: 8..21,
                                kind: Fix(
                                    Fix {
                                        expr: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 21,
                                                },
                                            },
                                            span: 8..21,
                                            kind: Lambda(
                                                Lambda {
                                                    params: [
                                                        EFnParam {
                                                            pat: Pattern {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 8,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 9,
                                                                    },
                                                                },
                                                                span: 8..9,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "f",
                                                                        mutable: false,
                                                                        span: 8..9,
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 8,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 9,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                            type_ann: None,
                                                            optional: false,
                                                        },
                                                    ],
                                                    body: Expr(
                                                        Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 12,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 21,
                                                                },
                                                            },
                                                            span: 12..21,
                                                            kind: Lambda(
                                                                Lambda {
                                                                    params: [],
                                                                    body: Expr(
                                                                        Expr {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 18,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 21,
                                                                                },
                                                                            },
                                                                            span: 18..21,
                                                                            kind: App(
                                                                                App {
                                                                                    lam: Expr {
                                                                                        loc: SourceLocation {
                                                                                            start: Position {
                                                                                                line: 0,
                                                                                                column: 18,
                                                                                            },
                                                                                            end: Position {
                                                                                                line: 0,
                                                                                                column: 19,
                                                                                            },
                                                                                        },
                                                                                        span: 18..19,
                                                                                        kind: Ident(
                                                                                            Ident {
                                                                                                loc: SourceLocation {
                                                                                                    start: Position {
                                                                                                        line: 0,
                                                                                                        column: 18,
                                                                                                    },
                                                                                                    end: Position {
                                                                                                        line: 0,
                                                                                                        column: 19,
                                                                                                    },
                                                                                                },
                                                                                                span: 18..19,
                                                                                                name: "f",
                                                                                            },
                                                                                        ),
                                                                                        inferred_type: None,
                                                                                    },
                                                                                    args: [],
                                                                                    type_args: None,
                                                                                },
                                                                            ),
                                                                            inferred_type: None,
                                                                        },
                                                                    ),
                                                                    is_async: false,
                                                                    return_type: None,
                                                                    type_params: None,
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                    ),
                                                    is_async: false,
                                                    return_type: None,
                                                    type_params: None,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
